--- a/style/style.css
+++ b/style/style.css
@@ -49,6 +49,10 @@ body {
     align-items: center;
 }
 
+.logo {
+    margin-top: 7px;
+}
+
 .menu {
     display: flex;    
 }
@@ -79,4 +83,73 @@ body {
 .menu a:hover {
     color: #fff;
     background-color: #2c71b8;
+}
+
+.dropdown {
+    position: relative;
+}
+.icon-down {
+    position: absolute;
+    top: 50%;
+    right: 12.5px;
+    color: #2c71b8;
+}
+.dropdown:hover .icon-down {
+    color: #fff;
+}
+
+.search-form {
+    display: flex;
+    width: 200px;
+    height: 40px;
+    border: 1px solid #2c71b8;
+    padding: 4px;
+    margin-top: 5px;
+}
+.search-form input {
+    width: 160px;
+    border: none;
+    color: #2c71b8;
+    font-size: 21px;
+    background-color: initial;
+}
+.search-form input::placeholder {
+    color: #2c71b8;
+    transform: translateX(12px);
+}
+.search-form button {
+    width: 30px;
+    height: 30px;
+    background-color: #2c71b8;
+    border: none;
+    background-image: url(../image/icon\ \(4\).png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+/* .start-end {
+    display: flex;
+    justify-content: flex-end;
+} */
+.cart {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    background-image: url(../image/icon\ \(1\).png);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    margin: 5px 0 0 auto;
+}
+.products-count {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: -11px;
+    left: -11px;
+    background-color: #2c71b8;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 20px;
 }
