--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,15 @@ body {
 .dropdown {
     position: relative;
 }
+.dropdown:hover {
+    background-color: #2c71b8;
+}
+.dropdown:hover a {
+    color: #fff;
+}
+.dropdown:hover .submenu {
+    display: block;
+}
 .icon-down {
     position: absolute;
     top: 50%;
@@ -96,6 +105,25 @@ body {
 }
 .dropdown:hover .icon-down {
     color: #fff;
+}
+.submenu {
+    display: none;
+    position: absolute;
+    width: 200%;
+    background-color: #2c71b8;
+    padding: 18px 0 17px;
+}
+.submenu li {
+    height: 40px;
+    width: 100%;
+    font-size: 21px;
+    color: #fff;
+    line-height: 40px;
+    padding-left: 29px;
+}
+.submenu li:hover {
+    background-color: #fff;
+    color: #2c71b8;
 }
 
 .search-form {
@@ -127,10 +155,6 @@ body {
     background-position: 50% 50%;
 }
 
-/* .start-end {
-    display: flex;
-    justify-content: flex-end;
-} */
 .cart {
     position: relative;
     width: 40px;
